update the swap_polarizations code to include additional swaps
this appears to be separate from the bug in the delay firmware

--- a/swapped-polarization-fixes/Makefile
+++ b/swapped-polarization-fixes/Makefile
@@ -2,11 +2,14 @@
 #CASACORE_LIB_DIR := /opt/astro/casacore-2.0.3/lib
 CASACORE_INC_DIR := /opt/astro/casacore-1.7.0/include/casacore
 CASACORE_LIB_DIR := /opt/astro/casacore-1.7.0/lib
-OUT_EXE := swap_polarizations_from_delay_bug
 
-$(OUT_EXE): *.cc
-	g++ -O3 -std=c++11 -I$(CASACORE_INC_DIR) -L$(CASACORE_LIB_DIR) -o $(OUT_EXE) *.cc -lcasa_casa -lcasa_tables -lcasa_ms
+all: swap_polarizations_100hr
+
+swap_polarizations_100hr: swap_polarizations_100hr.cc
+	g++ -O3 -std=c++11 -I$(CASACORE_INC_DIR) -L$(CASACORE_LIB_DIR) \
+		-o swap_polarizations_100hr swap_polarizations_100hr.cc \
+		-lcasa_casa -lcasa_tables -lcasa_ms
 
 clean:
-	rm $(OUT_EXE)
+	rm swap_polarizations_100hr
 
