add a routine for swapping polarizations in the rainy dataset too
see the email thread with Marin titled "Polarization swap expansion
antennas" from Tue, Mar 21, 2017 at 3:16 PM

--- a/swapped-polarization-fixes/Makefile
+++ b/swapped-polarization-fixes/Makefile
@@ -3,13 +3,19 @@
 CASACORE_INC_DIR := /opt/astro/casacore-1.7.0/include/casacore
 CASACORE_LIB_DIR := /opt/astro/casacore-1.7.0/lib
 
-all: swap-polarizations-100hr
+all: swap-polarizations-100hr swap-polarizations-rainy
 
 swap-polarizations-100hr: swap-polarizations-100hr.cc
 	g++ -O3 -std=c++11 -I$(CASACORE_INC_DIR) -L$(CASACORE_LIB_DIR) \
 		-o swap-polarizations-100hr swap-polarizations-100hr.cc \
 		-lcasa_casa -lcasa_tables -lcasa_ms
 
+swap-polarizations-rainy: swap-polarizations-rainy.cc
+	g++ -O3 -std=c++11 -I$(CASACORE_INC_DIR) -L$(CASACORE_LIB_DIR) \
+		-o swap-polarizations-rainy swap-polarizations-rainy.cc \
+		-lcasa_casa -lcasa_tables -lcasa_ms
+
 clean:
 	rm swap-polarizations-100hr
+	rm swap-polarizations-rainy
 
