initial characterization scripts for judd

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
 workspace/tmp
-workspace/spw04
-workspace/spw06
-workspace/spw08
-workspace/spw10
-workspace/spw12
-workspace/spw14
-workspace/spw16
-workspace/spw18
+workspace/spw*
