--- a/projects/2017-rainy-day-power-spectrum/Makefile
+++ b/projects/2017-rainy-day-power-spectrum/Makefile
@@ -5,6 +5,7 @@ LIB=../../lib
 LAUNCH=$(BIN)/launch.jl
 
 all: .pipeline/folded-visibilities
+raw: .pipeline/raw-data
 
 .pipeline/raw-data: $(LIB)/000-getdata.jl project.yml dada2ms.yml raw-data.yml
 	$(LAUNCH) --local-workers 8 $^
