--- a/projects/2017-rainy-day-power-spectrum/Makefile
+++ b/projects/2017-rainy-day-power-spectrum/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all
+.PHONY: all raw
 
 BIN=../../bin
 LIB=../../lib
@@ -6,6 +6,7 @@ LAUNCH=$(BIN)/launch.jl
 
 all: .pipeline/folded-visibilities
 raw: .pipeline/raw-data
+calibrated: .pipeline/calibrated-visibilities
 
 .pipeline/raw-data: $(LIB)/000-getdata.jl project.yml dada2ms.yml raw-data.yml
 	$(LAUNCH) --local-workers 8 $^
