update getdata to work with remote workers
(this will allow more trivial parallelization of future steps)

--- a/projects/2017-rainy-day-crrls/raw-data.yml
+++ b/projects/2017-rainy-day-crrls/raw-data.yml
@@ -1,3 +1,6 @@
+output: raw-visibilities
+output_times: times
+output_frequencies: frequencies
 subbands:
     17: [36, 55, 75, 95]
     18: [5, 25, 46, 66, 87, 108]
