I'm relatively pleased with the CRRL dirty maps now

--- a/projects/2017-rainy-day-crrls/calibrated-data.yml
+++ b/projects/2017-rainy-day-crrls/calibrated-data.yml
@@ -1,5 +1,6 @@
 input: flagged-visibilities
 output: calibrated-visibilities
+metadata: metadata
 sky-model: calibration-sky-model.json
 test-image: calibration
 integrations: 1640:1660
