--- a/projects/2017-rainy-day-power-spectrum/calibrated-flags.yml
+++ b/projects/2017-rainy-day-power-spectrum/calibrated-flags.yml
@@ -1,6 +1,13 @@
 input: calibrated-visibilities
 output: flagged-calibrated-visibilities
+output-accumulated: accumulated-calibrated-visibilities
+metadata: metadata
+bits: 128
 baseline-flag-threshold: 10
 integration-flag-threshold: 10
-integration-variance-flag-threshold: 5
+special-baselines: # these baselines will be plotted
+    - 314 # erroneously flagged at integration 2000 (when using unwindowed median)
+    - 4228
+    - 19520 # problematic at integration 763
+    - 30741 # longest baseline
 
