--- a/projects/2017-rainy-day-power-spectrum/raw-data.yml
+++ b/projects/2017-rainy-day-power-spectrum/raw-data.yml
@@ -1,3 +1,5 @@
+output: raw-visibilities
+output_metadata: metadata
 subbands:
     # Note: we exclude channels 7 and 11 because they don't seem to calibrate very well
     17: [1, 2, 3, 4, 5, 6, 8, 9, 10, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27,
