add a routine for averaging the transfer matrix and m-modes

--- a/projects/2017-rainy-day-power-spectrum/Makefile
+++ b/projects/2017-rainy-day-power-spectrum/Makefile
@@ -1,11 +1,11 @@
-.PHONY: all raw calibrate fold m-modes transfer-matrix dirty-map
+.PHONY: all raw calibrate fold m-modes transfer-matrix dirty-map average
 
 BIN=../../bin
 LIB=../../lib
 JULIA=julia-0.6 --color=yes
 LAUNCH=$(JULIA) $(BIN)/launch.jl
 
-all: dirty-map
+all: average
 raw: .pipeline/raw-visibilities
 flag: .pipeline/flagged-visibilities
 calibrate: .pipeline/calibrated-visibilities
@@ -13,6 +13,8 @@ fold: .pipeline/folded-visibilities
 m-modes: .pipeline/m-modes
 transfer-matrix: .pipeline/transfer-matrix
 dirty-map: .pipeline/dirty-map
+
+average: .pipeline/averaged-m-modes
 
 .pipeline/raw-visibilities: $(LIB)/000-getdata.jl project.yml dada2ms.yml raw-data.yml
 	$(LAUNCH) --remote-workers 2 $^
@@ -44,4 +46,8 @@ dirty-map: .pipeline/dirty-map
 .pipeline/transfer-matrix: .pipeline/raw-data \
 		$(LIB)/100-transfer-matrix.jl project.yml transfer-matrix.yml
 	$(LAUNCH) --remote-workers 4 $(filter-out $<,$^)
+
+.pipeline/averaged-m-modes: .pipeline/m-modes .pipeline/transfer-matrix \
+		$(LIB)/101-average-channels.jl project.yml averaged-m-modes.yml
+	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
 
