begin imposing some order on all of these yaml files
also adapt to some bpjspec improvements

--- a/projects/2017-rainy-day-power-spectrum/000-getdata.yml
+++ b/projects/2017-rainy-day-power-spectrum/000-getdata.yml
@@ -1,4 +1,4 @@
-output: raw-visibilities
+output: 000-raw-data
 output_metadata: metadata
 subbands:
     # Note: we exclude channels 7 and 11 because they don't seem to calibrate very well
