--- a/projects/2017-rainy-day-power-spectrum/001-flag-raw.yml
+++ b/projects/2017-rainy-day-power-spectrum/001-flag-raw.yml
@@ -1,8 +1,7 @@
-input: raw-visibilities
-output: flagged-visibilities
-output-accumulated: accumulated-raw-visibilities
+input: 000-raw-data
+output: 001-flagged-raw-data
+output-accumulated: 001-accumulated-raw-data
 metadata: metadata
-bits: 64
 baseline-flag-threshold: 15
 integration-flag-threshold: 15
 special-baselines: # these baselines will be plotted
