touchups to power spectrum pipeline

--- a/projects/2017-rainy-day-power-spectrum/001-flag-raw.yml
+++ b/projects/2017-rainy-day-power-spectrum/001-flag-raw.yml
@@ -1,6 +1,7 @@
 input: 000-raw-data
 output: 001-flagged-raw-data
 output-accumulated: 001-accumulated-raw-data
+output-flags: 001-raw-data-flags
 metadata: metadata
 baseline-flag-threshold: 15
 integration-flag-threshold: 15
