--- a/projects/2017-rainy-day-power-spectrum/001-flag-calibrated.yml
+++ b/projects/2017-rainy-day-power-spectrum/001-flag-calibrated.yml
@@ -1,6 +1,7 @@
 input: 002-calibrated-data
 output: 001-flagged-calibrated-data
-output-accumulated: accumulated-calibrated-visibilities
+output-accumulated: 001-accumulated-calibrated-visibilities
+output-flags: 001-calibrated-data-flags
 metadata: metadata
 baseline-flag-threshold: 10
 integration-flag-threshold: 10
