dirty map generation cleaned up

--- a/projects/2017-rainy-day-power-spectrum/031-getmmodes.yml
+++ b/projects/2017-rainy-day-power-spectrum/031-getmmodes.yml
@@ -1,5 +1,6 @@
-input: folded-visibilities
-output: m-modes
-mmax: 200
+input: 030-folded-data
+output: 031-m-modes
+metadata: metadata
+hierarchy: hierarchy
 delete_input: false
 
