--- a/projects/2017-rainy-day-power-spectrum/001-flag-calibrated.yml
+++ b/projects/2017-rainy-day-power-spectrum/001-flag-calibrated.yml
@@ -3,6 +3,7 @@ output: 001-flagged-calibrated-data
 output-accumulated: 001-accumulated-calibrated-visibilities
 output-flags: 001-calibrated-data-flags
 metadata: metadata
+channel-flag-threshold: 0
 baseline-flag-threshold: 10
 integration-flag-threshold: 10
 special-baselines: # these baselines will be plotted
